--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,10 @@ rand = "0.8.0"
 pest = "2.1.3"
 pest_derive = "2.1.0"
 cached = "0.23.0"
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "puffin_bench"
+harness = false
